--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -202,7 +202,7 @@
                     <!-- coupon discount -->
                     <div class="order-col">
                         <div>Coupon Discount</div>
-                        <div>₹<span id="couponDiscount">0</span></div>
+                        <div class="text-danger">₹<span id="couponDiscount">0</span></div>
                     </div>
                     
                     <div class="order-col">
@@ -246,7 +246,7 @@
                             Wallet
                         </label>
                         <div class="caption">
-                            <p>Your wallet ballance:₹ <%=wallet%></p>
+                            <p>Your wallet ballance:<span class="text-danger">₹ <%=wallet%></span></p>
                         </div>
                     </div>
                 </div>
