--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -187,6 +187,8 @@
         </div>
       </div>
     </div>
+
+    <!-- start chart -->
     <div class="row mt-4">
       <div class="col-lg-4 col-md-6 mt-4 mb-4">
         <div class="card z-index-2 ">
@@ -249,6 +251,9 @@
         </div>
       </div>
     </div>
+    <!-- end chart details -->
+
+
     <div class="row mb-4">
       <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
         <div class="card">
@@ -707,6 +712,8 @@
 <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
 <script src="../assets/js/plugins/smooth-scrollbar.min.js"></script>
 <script src="../assets/js/plugins/chartjs.min.js"></script>
+
+
 <script>
   var ctx = document.getElementById("chart-bars").getContext("2d");
 
