--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -30,6 +30,11 @@
 	
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"/>
+
+
+		<!-- Include the ImageZoom library from CDN -->
+		<script src="https://cdn.jsdelivr.net/npm/zooming@2.3.3/dist/zooming.min.js"></script>
+
 	
 		<style>
 			.header-links {
