--- a/views/layout/navigation.ejs
+++ b/views/layout/navigation.ejs
@@ -45,9 +45,10 @@
 					<ul class="main-nav nav navbar-nav" style="display: -webkit-box; height: 50px; text-align: center;">
 						<li class="active"><a href="/home">Home</a></li>
 						<!-- <li><a href="#">Hot Deals</a></li> -->
-						<li><a href="#">Categories</a></li>
+						<!-- <li><a href="#">Categories</a></li> -->
 						<li><a href="product">Products</a></li>
 						<li><a href="cart">Your Cart</a></li>
+						<li><a href="orders">Orders</a></li>
 						<li><a href="#">About us</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
