--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -80,12 +80,12 @@
                     <span class="badge rounded-pill bg-info">SHIPPING</span>
                   </div>
                   <div class="d-flex">
-                    <button
+                    <!-- <button
                       class="btn btn-primary p-2 d-none d-lg-block btn-icon-text"
                     >
                       <i class="bi bi-download"></i>
                       <span class="text">Invoice</span>
-                    </button>
+                    </button> -->
                     <!-- <div class="dropdown">
                       <button
                         class="btn btn-link p-0 text-muted"
