--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -54,10 +54,14 @@
                             <% data.products.forEach((product) => { %>
                                 <tr>
                                     <th scope="row" style="padding: 13px;"><%= count %></th>
-                                    <td><%= data.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                                    
+                                    <td><%= new Date(data.date).toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                        
                                     <td>₹<%= data.totalAmount %></td>
                                     <td><%= data.paymentMethod %></td>
-                                    <td><%= data.expectedDelivery.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                                    
+                                    <td><%= new Date(data.expectedDelivery).toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                            
                                     <td><%= product.orderStatus %></td>
                                     <td><%= data.uniqueId %></td>
                                     <td><a href="/orderDetails?id=<%= data._id %>" class="btn btn-primary">View Details</a></td>
@@ -86,6 +90,26 @@
               
         </div>
         <!-- row end -->
+
+                        <!-- store bottom filter -->
+                        <div class="store-filter clearfix">
+                            <span class="store-qty"></span>
+                            <ul class="store-pagination">
+                            <% for(let i=1;i<=totalPages;i++){%>
+                                <% if(currentPage==i){%>
+                                    <li class="active"><a href="?page=<%= i %>"><%= i %></a></li>
+                                    <% }else{ %>
+                                <li><a href="?page=<%= i %>"><%= i %></a></li>
+                                    <% } %>
+        
+                                <% }; %>
+                            </ul>
+                            <!-- <i class="fa fa-angle-right"></i> -->
+                        </div>
+                        <!-- /store bottom filter -->
+
+
+
     </div>
     <!-- container end -->
 </div>
